Simple file formatting :)

--- a/streams/client/public/index.html
+++ b/streams/client/public/index.html
@@ -14,9 +14,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript
-      >Sorry, but you need to enable JavaScript to run this app!</noscript
-    >
+    <noscript>Sorry, but you need to enable JavaScript to run this app!</noscript>
     <div id="root"></div>
   </body>
 </html>
